--- a/Source/frontend/src/index.html
+++ b/Source/frontend/src/index.html
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">
 </head>
 
 <body>
@@ -21,6 +23,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByxvhhRA9UFoBCfvxkcSoyPCXRzDjKMoI&libraries=places" async defer></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js"></script>
   </section>
 </body>
 
