--- a/Source/frontend/src/index.html
+++ b/Source/frontend/src/index.html
@@ -22,9 +22,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByxvhhRA9UFoBCfvxkcSoyPCXRzDjKMoI&libraries=places" async defer></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ace.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/mode-markdown.js"></script>
   </section>
 </body>
 
