--- a/Source/frontend/src/index.html
+++ b/Source/frontend/src/index.html
@@ -22,6 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlMwSVS-E3Qtq8napZuoIkwVouZt8hvt0&libraries=places" async defer></script>-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ace.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/mode-markdown.js"></script>
